Fixing various layout issues

--- a/styling.css
+++ b/styling.css
@@ -1,7 +1,7 @@
 body {
 	/* background: lightgray; */
 	background-color: #e9ecef;
-	font-family: 'Vollkorn', serif;
+	font-family: helvetica, arial, sans-serif;
 	position: relative;
 }
 
@@ -27,13 +27,32 @@ a.nav-link {
 }
 
 .mainContent {
-	margin-top: 50px;
-	padding: 4rem 2rem;
+	margin-top: 20px;
+	padding: 1.5rem 2rem;
 }
 
 .mainBio {
-	margin-top: 100px;
-	padding: 4rem 2rem;
+	margin-top: 20px;
+	padding: 1.5rem 2rem;
+}
+
+.title {
+	font-size: 14px;
+}
+
+.awards {
+	display: inline;
+}
+
+.awards li {
+	cursor: auto;
+	background-color: #e9ecef;
+	margin: 0 0 0 20px;
+	padding-left: 0;
+	padding-bottom: 0;
+	display: list-item;
+	list-style-type: initial;
+	line-height: 1;
 }
 
 img {
@@ -52,17 +71,18 @@ img {
 /* position: absolute; */
 
 section {
-	padding: 20px;
+	padding: 24px 20px 20px 0;
 	width: 1280px;
-	margin: 100px auto;
+	margin: 20px 0 20px 0;
 }
 
-section ul {
+ul {
 	display: flex;
-	margin-bottom: 10px;
+	margin-bottom: 0;
+	padding-left: 0;
 }
 
-section ul li {
+li {
 	list-style: none;
 	padding: 8px 20px;
 	margin: 5px;
@@ -71,7 +91,7 @@ section ul li {
 	cursor: pointer;
 }
 
-section ul li.active {
+li.active {
 	background: #03a9f4;
 	color: #fff;
 }
